* Fixes #1858: Column headers now line up in IE7 (although words now break in the middle)
git-svn-id: http://dev.zenoss.com/svnint/trunk/core@19509 f5df01ce-0320-0410-9ed9-ddcd13c732cc

--- a/Products/ZenWidgets/skins/zenui/css/zengrid.css
+++ b/Products/ZenWidgets/skins/zenui/css/zengrid.css
@@ -75,12 +75,15 @@ div.event_detail {
 div.cell_inner {
     background-color: transparent;
     padding:0 3px;margin:0;
-    overflow:hidden;
+    overflow: hidden;
     height: 32px;
     white-space: normal;
     font-size: 12px;
     line-height: 132%;
     vertical-align: middle;
+    /* These are for IE */
+    word-wrap: break-word;
+    word-break: break-all;
 }
 
 tr.even td.cell,
